# qtPro

./: .gitignore
All_of/: main.cpp
Binary_search/: main.cpp
COW_refcounter/: main.cpp
ConceptBasePoli/: main.cpp
CopyOnWrite/: main.cpp
EmptyClasses/: main.cpp
Functionoid/: main.cpp
InvokeMemberFunPtr/: main.cpp
Partition/: main.cpp
ProxyTrick/: main.cpp
TemplateDerivedClass/: TemplateDerivedClass.pro  main.cpp
TemplateFriend/: foo.cpp  foo.h  main.cpp
TemplateFunctionoids/: main.cpp
TemplateLinker/: TemplateLinker.pro  foo-impl.cpp  foo.cpp  foo.h  main.cpp
TemplateWrongDeduction/: main.cpp
VectorPoli/: main.cpp
abstract_factory/: main.cpp
adapter/: main.cpp
adapter-class/: main.cpp
binary_literals/: main.cpp
blue-green-pattern/: CMakeLists.txt  main.cpp  main_test.cpp
boost-beast-websocket-async/: CMakeLists.txt  client.html  client.js  main.cpp
bridge/: main.cpp
builder/: main.cpp
chainOfResposibility/: main.cpp
command/: command.pro  main.cpp
composite/: main.cpp
cpp-cmake-new-playgroud/: CMakeLists.txt  main.cpp
cpp17-105-stl-algo/: CMakeLists.txt  main.cpp
cpp17-cmake-bity-bajty/: CMakeLists.txt  main.cpp
cpp17-cmake-filozofowie/: CMakeLists.txt  conanfile.txt  main.cpp
cpp17-cmake-takietam/: CMakeLists.txt  main.cpp
cpp17-mt-queue/: CMakeLists.txt  main.cpp
cpp17-mt-queue-concurency-in-action/: CMakeLists.txt  main.cpp
cpp17-mt-s_threadpool-concurency-in-action/: CMakeLists.txt  main.cpp
cpp17-rw-locks/: CMakeLists.txt  main.cpp
cpp17-simple-threadpool/: CMakeLists.txt  main.cpp
cpp20-barrier/: CMakeLists.txt  main.cpp
decorator/: main.cpp
facade/: main.cpp
factory_method/: main.cpp
flyweight/: main.cpp
function_ref/: main.cpp
generator/: generator.pro  generator.pro.user.ad4be8b  main.cpp
gsl-multi-dim-arrays/: gsl-multi-dim-arrays.pro  main.cpp
interpreter/: main.cpp
iterator/: main.cpp
lock-free-stack/: main.cpp
magic_squares/: magic_squares.pro  main.cpp
map_and_fold/: main.cpp
mediator/: main.cpp
memento/: main.cpp
nokia-etteplan-zagadnienia/: CMakeLists.txt  main.cpp
nudy1/: main.cpp
nudy2/: main.cpp
observer/: main.cpp
pamiec1/: main.cpp
pmr-cpp17/: main.cpp
proTemplate/: CMakeLists.txt
proTemplate_conan/: CMakeLists.txt
prototype/: main.cpp
proxy/: main.cpp
range-v3-test1/: CMakeLists.txt  main.cpp
ranges_test1/: CMakeLists.txt  main.cpp
refCouter/: main.cpp
singleton/: main.cpp
state/: main.cpp
strategy/: main.cpp
string_builder/: main.cpp
strong-types/: main.cpp
templateMethod/: main.cpp
test1/: main.cpp  test1.pro
test123/: main.cpp
tuple-protocol/: main.cpp  tuple-protocol.pro
varian-visitor/: main.cpp  varian-visitor.pro
visitor/: main.cpp
zadanie-cherry/: zadanie-cherry.pro
zadanie-clearsoft/: deck.txt  main.cpp  zadanie-clearsoft.pro
zadanie-milo-z1/: main.cpp  zadanie-milo-z1.pro
zadanie-milo-z2/: main.cpp  zadanie-milo-z2.pro
zadanie-nk-2/: main.cpp  zadanie-nk-2.pro
zadanie-nk-3/: main.cpp
zadanie-o2/: main.cpp
zadanie-plusgps/: main.cpp
zadanie-rec/: main.cpp  zadanie-rec.pro
zadanie-rst/: main.cpp
zadanie_green2_cpp/: main.cpp
